# BCI-Workbench

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
bciworkbench/: __init__.py  experiment.py  reports.py  stressbench.py  stressbench_cards.py
bciworkbench/adaptation/: __init__.py  base.py  factory.py  metrics.py  recalibration.py
bciworkbench/cli/: main.py
bciworkbench/decoders/: __init__.py  base.py  pyriemann.py  simple.py  sklearn.py
bciworkbench/eval/: __init__.py  metrics.py
bciworkbench/graph/: __init__.py  context.py  node.py  nodes.py  runtime.py  scheduler.py
bciworkbench/ontology/: __init__.py  packets.py  schema_export.py  schemas.py  timing.py  validation.py
bciworkbench/sim/: __init__.py  domain_randomization.py  profiles.py
bciworkbench/sources/: __init__.py  base.py  factory.py  mne.py  moabb.py  p300.py  synthetic.py  xdf.py
bciworkbench/tasks/: __init__.py  (+3 more)
docs/: limitations.md  ontology.md  reports.md  simulation_realism.md  source_adapters.md
examples/: mi_cursor_synthetic.yml  mi_moabb_bnci2014_001.yml  mi_synthetic.yml  mi_synthetic_adaptive.yml  mi_synthetic_logistic.yml  p300_synthetic.yml  stressbench_architectures.yml  stressbench_mi.yml
tests/: test_adaptation.py  test_cli.py  test_config.py  test_cursor_task.py  test_decoders.py  test_domain_randomization.py  test_experiment.py  test_ontology.py  test_p300.py  test_pyriemann_decoder.py  test_replay_scheduler.py  test_reports.py  test_runtime.py  test_sources_mne.py  test_sources_moabb.py  test_sources_xdf.py  test_stressbench.py  test_synthetic.py
(+3 files in other folders)
